Add deleteTable method for deleting tables